[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/Minimap/minimap_grid.png" type="Texture" id=1]
[ext_resource path="res://art/Minimap/player_marker.png" type="Texture" id=2]
[ext_resource path="res://UI/Minimap.gd" type="Script" id=3]
[ext_resource path="res://art/Minimap/planet_marker.png" type="Texture" id=4]
[ext_resource path="res://art/Minimap/sun_marker.png" type="Texture" id=5]
[ext_resource path="res://art/Minimap/trailer_marker.png" type="Texture" id=6]
[ext_resource path="res://art/Minimap/warpgate_marker.png" type="Texture" id=7]
[ext_resource path="res://art/Minimap/hydrogen_marker.png" type="Texture" id=8]
[ext_resource path="res://art/Minimap/rocks_marker.png" type="Texture" id=9]
[ext_resource path="res://art/Minimap/ice_marker.png" type="Texture" id=10]

[node name="Minimap" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_bottom = 300.0
grow_horizontal = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 305.0
color = Color( 0.509804, 1, 1, 0.117647 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 305.0

[node name="Grid" type="TextureRect" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
margin_right = 300.0
margin_bottom = 300.0
texture = ExtResource( 1 )

[node name="Player" type="Sprite" parent="MarginContainer"]
position = Vector2( 150, 150 )
texture = ExtResource( 2 )

[node name="Planet" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 4 )

[node name="Sun" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 5 )

[node name="Warpgate" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 7 )

[node name="Trailer" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 6 )

[node name="IceCloud" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 10 )

[node name="HydrogenCloud" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 8 )

[node name="RocksCloud" type="Sprite" parent="MarginContainer"]
visible = false
texture = ExtResource( 9 )
